Facade,Singleton